Bug 74148 - LO crashes when opening an ott template file for editing
Summary: LO crashes when opening an ott template file for editing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.2.0.3 rc
Hardware: All All
: highest major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords: regression
: 74460 74579 74725 74828 76018 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-28 10:48 UTC by Milos Sramek
Modified: 2014-05-08 14:42 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
A template file, the bug is not related to this one - LO crashes with any Writer template (8.70 KB, application/vnd.oasis.opendocument.text-template)
2014-01-28 10:48 UTC, Milos Sramek
Details
mac osx crash file (82.06 KB, text/plain)
2014-01-30 19:20 UTC, Thomas van der Meulen [retired]
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Milos Sramek 2014-01-28 10:48:55 UTC
Created attachment 92916 [details]
A template file, the bug is not related to this one - LO crashes with any Writer template

Hi,

LO Version: 4.2.0.3
Build ID: c63c03decdf780d8fb80823950665b782ec9ecd0

crashes, when I try to open a template for editing from the Template manager.

To repeat:
If you do not have any templates installed, install the attached template and close LO

1. Start LO
2. Open the Template manager by clicking the Templates button
3. There, navigate to a template and activate it by single click. A toolbar appears.
4. Click the Edit button on the toolbar - LO crashes

OK in LO41

Tested only with Writer templates

--
Milos
Comment 1 Thomas van der Meulen [retired] 2014-01-30 19:17:35 UTC
Thank you for your bug report,
I can reproduce this bug in 4.2.0.2 
I cannot reproduce this in 4.1.3.2 

Test system details: 
Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
os: mac osx 10.9.1
Comment 2 Thomas van der Meulen [retired] 2014-01-30 19:20:10 UTC
Created attachment 93083 [details]
mac osx crash file
Comment 3 manj_k 2014-02-03 20:17:37 UTC
*** Bug 74460 has been marked as a duplicate of this bug. ***
Comment 4 V Stuart Foote 2014-02-03 21:06:32 UTC
bumping importance and adding this to MAB 4.2 for regression

the bug 74460 detailed regression from 4.2.0.2 --> 4.2.0.3 and Windows and Linux in addition to OS X report of OP for this issue.
Comment 5 Cor Nouws 2014-02-05 20:35:40 UTC
*** Bug 74579 has been marked as a duplicate of this bug. ***
Comment 6 p_kongstad 2014-02-05 21:58:05 UTC
Changed to version 4.1.5.2 rc as I can confirm same issue on Version: 4.1.5.2
Build ID: a02f36998a4af5e2f9fbec2b7e9f70a8b0bc934
Comment 7 p_kongstad 2014-02-06 12:44:52 UTC
This bug is also relevant for templates with scalc. Maybe this is a general bug for editing any template.
Comment 8 Michael Stahl 2014-02-06 14:11:49 UTC
cannot reproduce on Linux 4.1.5.1 / 4.1.5.2 / 4.1.5.3
Comment 9 Commit Notification 2014-02-06 17:03:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8e206fdaab7490fb6e62bc7ab475888236179c2

fdo#74148: sfx2: fix crash when editing template



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Stahl 2014-02-06 17:09:35 UTC
p_kongstad@op.pl, can you please confirm that this really crashed for you in a 4.1.x release, not 4.2.x?  because for me it only crashes in 4.2.


/usr/include/c++/4.8.2/debug/safe_iterator.h:293:error: attempt to 
    increment a singular iterator.

Objects involved in the operation:
iterator "this" @ 0x0x7ffff8da4c00 {
type = N11__gnu_debug14_Safe_iteratorISt23_Rb_tree_const_iteratorIPK17ThumbnailViewItemENSt7__debug3setIS4_PFbS4_S4_ESaIS4_EEEEE (mutable iterator);
  state = singular;
  references sequence with type `NSt7__debug3setIPK17ThumbnailViewItemPFbS3_S3_ESaIS3_EEE' @ 0x0x7ffff8da4c00

fixed on master
Comment 11 p_kongstad 2014-02-06 17:18:53 UTC
Dear Michael,

I reset the user profile which was created by version 4.2. Creating the user profile with 4.1.5.2 RC allows for editing the templates.

Sorry for error in the bug reporting.
Comment 12 Commit Notification 2014-02-07 11:56:39 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=69c487642143f5c77885ab674aa2aaae039b5bb7&h=libreoffice-4-2

fdo#74148: sfx2: fix crash when editing template


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Rob Parker 2014-02-08 21:36:10 UTC
*** Bug 74725 has been marked as a duplicate of this bug. ***
Comment 14 manj_k 2014-02-10 17:54:40 UTC
Thanks a lot @Michael Stahl.

Verified (on Windows 7 64-bit) with:

LibreOfficeDev v4.2.1.0.0+
Build ID: 6a27efa43b2181599fb92ed99061e5b491dfd4a2
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-02-10_09:42:34

LibreOfficeDev v4.3.0.0.alpha0+
Build ID: ad5443b929962dea64985b3b197ea323aafab834
TinderBox: Win-x86@42, Branch:master, Time: 2014-02-09_22:47:33
Comment 15 manj_k 2014-02-11 15:41:14 UTC
*** Bug 74828 has been marked as a duplicate of this bug. ***
Comment 16 manj_k 2014-03-11 17:09:48 UTC
*** Bug 76018 has been marked as a duplicate of this bug. ***
Comment 17 Peter Lairo 2014-05-08 09:20:02 UTC
(In reply to comment #12)
> fdo#74148: sfx2: fix crash when editing template
> 
> It will be available in LibreOffice 4.2.1.

It's been 3 months since that post, but LibreOffice 4.2.1 has still not been released.

Template editing is still crashing the current release version of LibreOffice. My version is 4.2.0.4, and a "Check for Updates" says "LibreOffice 4.2 is up to date". What's going on?

When is LibreOffice 4.2.1 planned to be released?

The Release Plan[1] seems to indicate that LibreOffice 4.2.1 was supposed to have been released by 13 April 2014 (one month ago).

[1] https://wiki.documentfoundation.org/ReleasePlan
Comment 18 V Stuart Foote 2014-05-08 12:10:38 UTC
Pedro,
(In reply to comment #17)
> > fdo#74148: sfx2: fix crash when editing template
> > 
> > It will be available in LibreOffice 4.2.1.
> 
The check for updates function does not work correctly.

Here are dates for the releases for 4.2 thus far, available here:
http://downloadarchive.documentfoundation.org/libreoffice/old/

4.2.1.1	15-Apr-2014
4.2.3.3	17-Apr-2014
4.2.4.2	05-May-2014

Your best bet is to check the downloads on the project download page, here:
http://www.libreoffice.org/download/libreoffice-fresh/

But have a peak at the link to the Development Versions page from time to time.
Comment 19 V Stuart Foote 2014-05-08 12:13:34 UTC
(In reply to comment #18)

s/Pedro,/Peter,
Comment 20 V Stuart Foote 2014-05-08 13:54:46 UTC
(In reply to comment #18)
One of those days...the 4.2.1.1 release was 14 Feb so
s/ 4.2.1.1	15-Apr-2014/ 4.2.1.1	14-Feb-2014
Comment 21 V Stuart Foote 2014-05-08 14:42:47 UTC
Peter,
(In reply to comment #17)
The devs just gave this a tweak. Please try the "check for update" from Help menu.

Let us know how that goes and if Template Editing is in fact fixed for you.